--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -16,27 +16,29 @@
 
 <body>
     <header class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper">
-                <ul>
-                    <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Cat Collector</a></li>
-                </ul>
-                <ul class="right">
-                    <li class= "button "><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-                    <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
-                    <li><a href="{% url 'cats_create' %}">Add a Cat</a></li>
-                    <li><a href="{% url 'index' %}">View All My Cats</a></li>
-                </ul>
-            </div>
-        </nav>
     </header>
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
     <footer class="page-footer">
-        <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+        <nav>
+            <div class="nav-wrapper">
+        <ul>
+            <li><a href="/" class="left brand-logo">Logo</a></li>
+        </ul>
+        <ul class="right">
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'toys_create' %}">Drugs</a></li>
+            <li><a href="{% url 'toys_index' %}">Experiences</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+            {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
+        </ul>
+            </div>
+        </nav>
     </footer>
 </body>
 
