--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -29,6 +29,7 @@
         </ul>
         <ul class="right">
             {% if user.is_authenticated %}
+            <li><a href="{% url 'toys_create' %}">Community</a></li>
             <li><a href="{% url 'toys_create' %}">Drugs</a></li>
             <li><a href="{% url 'toys_index' %}">Experiences</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
