--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cat Collector</title>
+    <title>That Time in the Desert</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.com/libraries/bulma"></script>
@@ -31,8 +31,6 @@
         <ul class="right">
             {% if user.is_authenticated %}
             <li><a href="{% url 'community'}">Community</a></li>
-            <li><a href="{% url 'drugs_create' %}">Drugs</a></li>
-            <li><a href="{% url 'experience_index' %}">Experiences</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
