--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load sass_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,9 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Time in the Desert</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.com/libraries/bulma"></script>
+    
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="{% sass_src 'styles/style.scss' %}" rel="stylesheet" type="text/css" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
@@ -22,7 +24,7 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer class="page-footer">
+    <footer class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
         <ul>
@@ -39,7 +41,7 @@
         </ul>
             </div>
         </nav>
-        <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+        <div class="right">Filler text</div>
     </footer>
 </body>
 
