--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -9,11 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Time in the Desert</title>
-    <script src="https://cdnjs.com/libraries/bulma"></script>
-    
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="{% sass_src 'styles/style.scss' %}" rel="stylesheet" type="text/css" />
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://cdnjs.com/libraries/bulma"></script>
 </head>
 
 <body>
@@ -24,15 +22,17 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer class="navbar-fixed">
+    <footer class="navbar">
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav">
         <ul>
             <li><a href="/" class="left brand-logo">Logo</a></li>
         </ul>
         <ul class="right">
             {% if user.is_authenticated %}
-            <li><a href="{% url 'community'}">Community</a></li>
+            <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'trips_all' %}">Trip Reports</a></li>
+            <li><a href="{% url 'substances_all' %}">Substances</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
             {% else %}
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
