replaces 'd' variable to 'substance' for readability.

--- a/ttitd/main_app/templates/substances/all.html
+++ b/ttitd/main_app/templates/substances/all.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Substances</h1>
-{% for d in d %}
+{% for d in substance %}
     Substance: {{ d.profile_name }}
     <br>
     description: {{ d.description }}
@@ -14,5 +14,3 @@
 {% endfor %}
 
 {% endblock %}
-
-s
