--- a/ttitd/main_app/templates/profile/detail.html
+++ b/ttitd/main_app/templates/profile/detail.html
@@ -18,5 +18,5 @@
     Social: {{ p.social_link }}
     <br>
     <br>
-    <h2><a href="{% url 'profile_update' profile %}">Update your profile</a></h2>
+    <h2><a href="{% url 'profile_update' %}">Update your profile</a></h2>
 {% endblock %}
