--- a/ttitd/main_app/templates/profile/profile_update.html
+++ b/ttitd/main_app/templates/profile/profile_update.html
@@ -2,11 +2,10 @@
 {% block content %}
 
 <h1> Profile update </h1>
-
 <form method="post" action="{% url 'profile_update' %}">
     {% csrf_token %}
-    {{ p_form.as_p}}
-    <input type="submit" class="btn" value="profile_update">
+    {{ profile_form.as_p }}
+    <input type="submit" class="btn" value="Update Profile">
 </form>
 
 {% endblock %}
