--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>That Time in the Desert</title>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script defer src="static/js/main.js"></script>
+    <script defer src="{% static 'js/main.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link href="{% sass_src 'styles/style.scss' %}" rel="stylesheet" type="text/css" />
 
@@ -31,7 +31,7 @@
                                     </div>
                 <div class="mobi_nav navbar-burger">
                     <figure class="image is-32x32">
-                        <img src="static/assets/img/nav/sherpa_nav.png" class="cactus_mobi">
+                        <img src="{% static 'assets/img/nav/sherpa_nav.png' %}" class="cactus_mobi">
                     </figure>
                 </div>
             </div>
@@ -40,10 +40,8 @@
 
     start of body 
     <main class="container">
-        start of block
         {% block content %}
         {% endblock %}
-        end of block
     </main>
     end of body
 
@@ -51,13 +49,14 @@
         <nav class="navbar" role="navigation">
             <div class="navbar-menu">
                 <figure class="image is-32x32 cactus">
-                    <img src="static/assets/img/nav/sherpa_nav.png" class="cactus">
+                    <img src="{% static 'assets/img/nav/sherpa_nav.png' %}" class="cactus">
                 </figure>
                     <div class="nav_links buttons are-small">
                         {% if user.is_authenticated %}
                         <a class="button is-black" href="{% url 'profile' %}">Profile</a>
                         <a class="button is-black" href="{% url 'trips_all' %}">Trip Reports</a>
                         <a class="button is-black" href="{% url 'substances_all' %}">Substances</a>
+                        <a class="button is-black" href="{% url 'substances_detail' %}">Substances Detail</a>
                         <a class="button is-black" href="{% url 'logout' %}">Log Out</a>
                         {% else %}
                         <a class="button is-black" href="{% url 'signup' %}">Sign Up</a>
