Updates for pull request

--- a/main_app/templates/profile/detail.html
+++ b/main_app/templates/profile/detail.html
@@ -3,11 +3,11 @@
 
 <h1>This is the profile</h1>
 
-    Name: {{ p.profile_name }}
+    Name: {{ user.profile.profile_name }}
     <br>
-    Location: {{ p.location }}
+    Location: {{ user.profile.location }}
     <br>
-    Gender: {{ p.gender }}
+    Gender: {{ user.profile.gender }}
     <br>
     Age: {{ p.age }}
     <br>
