--- a/main_app/static/styles/style.scss
+++ b/main_app/static/styles/style.scss
@@ -1,4 +1,5 @@
-@media only screen and (max-width: 1023px) {
+
+@media only screen and (max-width: 700px) {
 .mobi_nav {
     overflow: hidden;
     height: 32px;
@@ -6,18 +7,21 @@
   }
 
 .mobi_nav_links {
-    display: hidden;
+    display: none;
   }
 
 .navbar-menu {
-    display: hidden;
+    display: none;
     }
 
 }
 
-.mobi_nav {
-    display: hidden;
-}
+
+.mobi_nav_links {
+    display: none;
+  }
+
+
 
 body {
     background-color: grey;
@@ -25,7 +29,7 @@ body {
 }
 
 .nav_links {
-    display: hidden;
+    display: none;
   }
 
 .nav_links a {
@@ -45,4 +49,4 @@ body {
 
 .topnav a:hover {
     color: white
-  }
+}
