--- a/ttitd/main_app/templates/base.html
+++ b/ttitd/main_app/templates/base.html
@@ -22,6 +22,7 @@
                                         {% if user.is_authenticated %}
                                         <a class="button is-light" href="{% url 'profile' %}">Profile</a>
                                         <a class="button is-light" href="{% url 'trips_all' %}">Trip Reports</a>
+                                         <a class="button is-light" href="{% url 'trips_detail' %}">Trip Detail</a>
                                         <a class="button is-light" href="{% url 'substances_all' %}">Substances</a>
                                         <a class="button is-light" href="{% url 'logout' %}">Log Out</a>
                                         {% else %}
@@ -55,8 +56,10 @@
                         {% if user.is_authenticated %}
                         <a class="button is-black" href="{% url 'profile' %}">Profile</a>
                         <a class="button is-black" href="{% url 'trips_all' %}">Trip Reports</a>
+                        <!-- delete below -->
+                    <a class="button is-black" href="{% url 'trips_detail' %}">Trip Detail</a>
+                    <!-- delete above -->
                         <a class="button is-black" href="{% url 'substances_all' %}">Substances</a>
-                        <a class="button is-black" href="{% url 'substances_detail' %}">Substances Detail</a>
                         <a class="button is-black" href="{% url 'logout' %}">Log Out</a>
                         {% else %}
                         <a class="button is-black" href="{% url 'signup' %}">Sign Up</a>
