fixes to user login

--- a/main_app/templates/profile/detail.html
+++ b/main_app/templates/profile/detail.html
@@ -45,6 +45,6 @@
     <br>
     <br>
    <center><a class="button is-link is-inverted" href="{% url 'profile_update' %}">Update your profile</a></center>
-   <center><a class="button is-danger" href="{% url 'profile_delete' user.profile.id %}">Delete Profile</a></center>
+   <!-- <center><a class="button is-danger" href="{% url 'profile_delete' user.profile.id %}">Delete Profile</a></center> -->
 {% endif %}
 {% endblock %}
