--- a/main_app/templates/substances/detail.html
+++ b/main_app/templates/substances/detail.html
@@ -9,10 +9,10 @@
         </article>
         <div class="tile">
             <article class="tile">
-                <p class="small">Recommended Doese: {{ substance.req_dose }} Do not delete. This is all placeholder.</p>
+                <p class="small">Recommended Doese: {{ substance.req_dose }}</p>
             </article>
             <article class="tile">
-                <p class="small">Views = {{ substance.view_count }}- Do not delete. This is all placeholder.</p>
+                <p class="small">Views = {{ substance.view_count }}</p>
             </article>
         </div>
     </div>
@@ -40,44 +40,9 @@
                         <p>Trip Reports</p>
                     </center>
             </article>
-            <article class="tile is-child ">
-                <center>
-                Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-            <article class="tile is-child">
-                <center>
-                    Lorem Ipsum
-                </center>
-            </article>
-        </div>
-
-</div>
-
+{% for report in trips %}
+  {{ report.trip_name }}
+  {{ report.other_drugs_taken }}
+{% endfor %}
 
 {% endblock %}
