adds styling to website

--- a/main_app/static/styles/style.css
+++ b/main_app/static/styles/style.css
@@ -6,14 +6,56 @@
   .mobi_nav_links {
     display: none; }
   .navbar-menu {
-    display: none; } }
+    display: none; }
+  div.fadeMe {
+    opacity: 0.92;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    position: fixed; }
+  .overlay_ele {
+    opacity: 1.0;
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    background: black; } }
 
-.mobi_nav_links {
+div.fadeMe {
+  opacity: .92;
+  background: #000;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  position: fixed; }
+
+.card.overlay_ele {
+  opacity: .85;
+  z-index: 20;
+  background: cornflowerblue; }
+
+.vis_blo {
+  display: block;
+  visibility: hidden; }
+
+.mobi_nav_links, .mobi_nav {
   display: none; }
 
 body {
-  background-color: grey;
-  margin: 0px; }
+  background: #4a4a4a;
+  margin: 0px;
+  color: whitesmoke;
+  font-family: oxygen; }
+
+.title, .label {
+  color: white; }
+
+.mobi_back {
+  background: grey-dark; }
 
 .nav_links {
   display: none; }
@@ -29,8 +71,5 @@ body {
 
 .cactus .cactus_mobi {
   margin: 0px; }
-
-.topnav a:hover {
-  color: white; }
 
 /*# sourceMappingURL=style.css.map */
