--- a/main_app/static/styles/style.scss
+++ b/main_app/static/styles/style.scss
@@ -1,30 +1,84 @@
+$displays: (
+  "vis": visible,
+  "hid": hidden,
+  "non": none,
+  "blo": block,
+  "list": list-item,
+);
+
 @media only screen and (max-width: 700px) {
-.mobi_nav {
-    overflow: hidden;
+  .mobi_nav {
+    overflow: map-get($displays, "hid");
     height: 32px;
     width: 32px;
   }
 
-.mobi_nav_links {
-    display: none;
+  .mobi_nav_links {
+    display: map-get($displays, "non");
   }
 
-.navbar-menu {
-    display: none;
-    }
+  .navbar-menu {
+    display: map-get($displays, "non");
+  }
+  div.fadeMe {
+    opacity:    0.92; 
+    background: #000; 
+    width:      100%;
+    height:     100%; 
+    z-index:    10;
+    top:        0; 
+    left:       0; 
+    position:   fixed; 
+  }
 
+
+  .overlay_ele {
+    opacity: 1.0;
+    z-index: 20;
+    width:      100%;
+    height:     100%; 
+    background: black;
+  }
 }
 
+div.fadeMe {
+  opacity:    .92; 
+  background: #000; 
+  width:      100%;
+  height:     100%; 
+  z-index:    10;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
 
-.mobi_nav_links {
+.card.overlay_ele {
+  opacity: .85;
+  z-index: 20;
+  background: cornflowerblue;
+}
+
+.vis_blo{
+  display: map-get($displays, "blo");
+  visibility: map-get($displays, "hid");
+}
+.mobi_nav_links, .mobi_nav {
     display: none;
   }
 
-
-
 body {
-    background-color: grey;
+    background:hsl(0, 0%, 29%);
     margin: 0px;
+    color: hsl(0, 0%, 96%);
+    font-family: oxygen;
+}
+
+.title,.label {
+  color: white;
+}
+
+.mobi_back {
+  background: grey-dark;
 }
 
 .nav_links {
@@ -37,7 +91,7 @@ body {
   }
 .topnav a {
     color: slategrey;
-    text-decoration: none;
+    text-decoration: map-get($displays, "non");
     font-size: 17px;
     display: block;
   }
@@ -45,7 +99,3 @@ body {
 .cactus .cactus_mobi {
     margin: 0px
   }
-
-.topnav a:hover {
-    color: white
-}
