--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load bulma_tags %}
 {% block content %}
 
 <h1>Log In</h1>
 
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|bulma }}
     <input type="submit" class="btn" value="login">
     <input type="hidden" name="next" value="{{ next }}">
 </form>
