--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bulma_tags %}
 {% block content %}
 
 <h1>Sign Up</h1>
@@ -7,7 +8,7 @@
 
 <form method="post" action="{% url 'signup' %}">
     {% csrf_token %}
-    {{ user_form.as_p }}
+    {{ user_form|bulma }}
     <input type="submit" class="btn" value="signup">
 </form>
 
