--- a/main_app/templates/trips/create.html
+++ b/main_app/templates/trips/create.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load bulma_tags %}
+
     {% block content %}
     {% if object %}
     <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
     {% else %}
-    <h1>Add Trip</h1>
+    <h1 class="title">Add Trip</h1>
     {% endif %}
     <!-- Leaving the action empty makes the form post to the same url used to display it -->
     <form action="" method="post">
@@ -11,7 +13,7 @@
         {% csrf_token %}
         <table>
             <!-- Render the inputs inside of <tr>s & <td>s -->
-            {{ trip_form.as_table }}
+            {{ trip_form|bulma }}
         </table>
 
         <input type="submit" value="Submit!" class="btn">
