--- a/main_app/static/styles/style.scss
+++ b/main_app/static/styles/style.scss
@@ -32,6 +32,7 @@ $displays: (
   }
 
 
+
   .overlay_ele {
     opacity: 1.0;
     z-index: 20;
@@ -41,6 +42,51 @@ $displays: (
   }
 }
 
+.hero-body {
+  opacity: .8;
+  background-size: cover;
+  background-position: center;
+  width: 100wh;
+  height: 100vh;
+}
+
+
+.back-vid {
+  position: absolute; 
+  float: left; 
+  clear: both; 
+  width: 100%; 
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none; 
+  z-index: -10; 
+  opacity: 1 !important;
+   
+}
+
+
+.hero-head{
+  background: black;
+  opacity: 1 !important;
+}
+.black-box {
+  background: black;
+  opacity: 1 !important;
+}
+
+.i-black {
+  color:black;
+  opacity: 1 !important;
+}
+
+.transparent_box {
+  background: transparent;
+}
+
+.hero-foot {
+  z-index: 100;
+}
 div.fadeMe {
   opacity:    .92; 
   background: #000; 
