--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,94 @@
 {% extends 'base.html' %}
 {% block content %}
+            <nav class="navbar has-background-black-ter" role="navigation">
+                <div class="navbar-menu">
+                    <figure class="image is-64x64 cactus">
+                        <img src="/static/assets/img/nav/sherpa_nav.png" class="cactus">
+                    </figure>
+                    <div class="nav_links buttons are-large">
+                        {% if user.is_authenticated %}
+                        <a class="button is-black" href="{% url 'profile' %}">Profile</a>
+                        <a class="button is-black" href="{% url 'trips_all' %}">Trip Reports</a>
+                        <a class="button is-black" href="{% url 'substances_index' %}">Substances</a>
+                        <a class="button is-black" href="{% url 'logout' %}">Log Out</a>
+                        {% else %}
+                        <a class="button is-black" href="{% url 'signup' %}">Sign Up</a>
+                        <a class="button is-black" href="{% url 'login' %}">Log In</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </nav>
 
-<h1>Fun stuff</h1>
+<section class="hero is-dark is-fullwidth">
+    <!-- Hero head: will stick at the top -->
+    <div class="hero-head">
+        <header class="title">
+            That Time in the Desert
+            <br>
+            <h2 class="subtitle">
+            <br>
+        </h2>
+        </div>
+    </header>
+</section>
+    <!-- Hero content: will be in the middle -->
+  
+    <div class="hero-body is-fullwidth is-transparent">
+        <div class="container has-text-centered black-box is-fullwidth">
+            <h1 class="title black-box">
+                Mission
+            </h1>
+                <br>
+            <h2 class="subtitle">
+            We want to create a community of free education for individuals to 
+            share their experiences that will help newbies make
+            their own decision of whether to partake. Safety first, fun second.
+            </h2>
+        </div>
+        <br><br><br><br>
+        <div class="container has-text-centered transparent_box">
+            <h1 class="title has-text-danger	">
+                Section 2
+            </h1>
+            <h2 class="subtitle i-grey">
+                Vel pretium lectus quam id leo in vitae turpis massa. Facilisi etiam dignissim diam quis enim. Consectetur adipiscing
+                elit duis tristique. Urna duis convallis convallis tellus id interdum. Mauris a diam maecenas sed enim ut.
+            </h2>
+        </div>
+        <br><br>
+        <div class="container has-text-centered black-box">
+            <h1 class="title">
+                Section 3
+                    <br><br>
+            </h1>
+            <h2 class="subtitle">
+                Rhoncus aenean vel elit scelerisque mauris. Ut tortor pretium viverra suspendisse potenti nullam ac. Aliquam purus sit
+                amet luctus venenatis. Pulvinar pellentesque habitant morbi tristique senectus et. Bibendum at varius vel pharetra vel
+                turpis nunc eget. Tincidunt vitae semper quis lectus nulla at.
+            </h2>
+        </div>
+        <br><br>
+                <div class="container has-text-centered transparent_box">
+                    <h1 class="title has-text-danger">
+                        Section 4
+                    </h1>
+                    <br><br>
+                    <h2 class="subtitle i-grey">
+                        sus feugiat in ante metus dictum. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Nibh
+                        venenatis cras sed felis eget velit aliquet sagittis. Sagittis purus sit amet volutpat consequat. Porta lorem mollis
+                        aliquam ut porttitor leo. Sem fringilla ut morbi tincidunt augue interdum velit euismod. Id leo in vitae turpis massa.
+                        Bibendum neque egestas congue quisque egestas diam. Metus dictum at tempor commodo ullamcorper a. Id cursus metus
+                        aliquam eleifend mi in nulla posuere.
+
+                    </h2>
+                </div>
+            <iframe class="is-fullheight is-fullwidth back-vid" width="100%" height="100%"
+                src="https://www.youtube.com/embed/euNEx4ovjkA" frameborder="0" </iframe>
+    </div>
+
+    <!-- Hero footer: will stick at the bottom -->
+    <div class="hero-foot">
+
+    </div>
 
 {% endblock %}
