Adds updates to display user's avatar

--- a/main_app/templates/profile/detail.html
+++ b/main_app/templates/profile/detail.html
@@ -24,7 +24,7 @@
             <div class="media">
                 <div class="media-left">
                     <figure class="image is-48x48">
-                        <img src="https://image-cdn.neatoshop.com/styleimg/86770/none/black/default/417000-20;1556905905t.jpg">
+                        <img src="{{ user.profile.profilephoto.url }}">
                     </figure>
                 </div>
                 <div class="media-content">
