--- a/main_app/templates/profile/detail.html
+++ b/main_app/templates/profile/detail.html
@@ -28,7 +28,8 @@
                     </figure>
                 </div>
                 <div class="media-content">
-                    <p class="title is-4">{{ user.profile.profile_name }} <a class="button is-link is-small is-rounded" href="{{ user.profile.social_link }}">Check out my social media</a></p>
+                    <p class="title" style="color:black">{{ user.profile }}</p>
+                    <p class="title is-4"><a class="button is-link is-small is-rounded" href="{{ user.profile.social_link }}">Check out my social media</a></p>
                     <p class="subtitle is-6">{{ user.profile.location }}</p>
                 </div>
             </div>
