--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -56,6 +56,7 @@
                         <a class="button is-black" href="{% url 'profile' %}">Profile</a>
                         <a class="button is-black" href="{% url 'trips_all' %}">Trip Reports</a>
                         <a class="button is-black" href="{% url 'substances_index' %}">Substances</a>
+                        <a class="button is-light" href="{% url 'experiences' %}">Experiences</a>
                         <a class="button is-black" href="{% url 'logout' %}">Log Out</a>
                         {% else %}
                         <a class="button is-black" href="{% url 'signup' %}">Sign Up</a>
