--- a/main_app/static/styles/style.scss
+++ b/main_app/static/styles/style.scss
@@ -1,31 +1,131 @@
+$displays: (
+  "vis": visible,
+  "hid": hidden,
+  "non": none,
+  "blo": block,
+  "list": list-item,
+);
+
 @media only screen and (max-width: 700px) {
-.mobi_nav {
-    overflow: hidden;
+  .mobi_nav {
+    overflow: map-get($displays, "hid");
     height: 32px;
     width: 32px;
   }
 
-.mobi_nav_links {
-    display: none;
+  .mobi_nav_links {
+    display: map-get($displays, "non");
   }
 
-.navbar-menu {
-    display: none;
-    }
+  .navbar-menu {
+    display: map-get($displays, "non");
+  }
+  div.fadeMe {
+    opacity:    0.92; 
+    background: #000; 
+    width:      100%;
+    height:     100%; 
+    z-index:    10;
+    top:        0; 
+    left:       0; 
+    position:   fixed; 
+  }
 
+
+
+  .overlay_ele {
+    opacity: 1.0;
+    z-index: 20;
+    width:      100%;
+    height:     100%; 
+    background: black;
+  }
+}
+
+.hero-body {
+  opacity: .8;
+  background-size: cover;
+  background-position: center;
+  width: 100wh;
+  height: 100vh;
 }
 
 
-.mobi_nav_links {
+.back-vid {
+  position: absolute; 
+  float: left; 
+  clear: both; 
+  width: 100%; 
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none; 
+  z-index: -10; 
+  opacity: 1 !important;
+   
+}
+
+
+.hero-head{
+  background: black;
+  opacity: 1 !important;
+}
+.black-box {
+  background: black;
+  opacity: 1 !important;
+}
+
+.i-black {
+  color:black;
+  opacity: 1 !important;
+}
+
+.transparent_box {
+  background: transparent;
+}
+
+.hero-foot {
+  z-index: 100;
+}
+div.fadeMe {
+  opacity:    .92; 
+  background: #000; 
+  width:      100%;
+  height:     100%; 
+  z-index:    10;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+
+.card.overlay_ele {
+  opacity: .85;
+  z-index: 20;
+  background: cornflowerblue;
+}
+
+.vis_blo{
+  display: map-get($displays, "blo");
+  visibility: map-get($displays, "hid");
+}
+.mobi_nav_links, .mobi_nav {
     display: none;
   }
 
-
-
 body {
-    background-color: grey;
+    background:hsl(0, 0%, 29%);
     margin: 0px;
+    color: hsl(0, 0%, 96%);
+    font-family: oxygen;
     font-size: 16px;
+}
+
+.title,.label {
+  color: white;
+}
+
+.mobi_back {
+  background: grey-dark;
 }
 
 .nav_links {
@@ -38,7 +138,7 @@ body {
   }
 .topnav a {
     color: slategrey;
-    text-decoration: none;
+    text-decoration: map-get($displays, "non");
     font-size: 17px;
     display: block;
   }
@@ -46,7 +146,3 @@ body {
 .cactus .cactus_mobi {
     margin: 0px
   }
-
-.topnav a:hover {
-    color: white
-}
