adds two home pages, vid assets, and JS and style.

--- a/main_app/static/styles/style.scss
+++ b/main_app/static/styles/style.scss
@@ -65,11 +65,10 @@ $displays: (
    
 }
 
-
-.hero-head{
-  background: black;
-  opacity: 1 !important;
+.section-open-pad {
+  padding: 5% 0px;
 }
+
 .black-box {
   background: black;
   opacity: 1 !important;
@@ -109,20 +108,188 @@ div.fadeMe {
   visibility: map-get($displays, "hid");
 }
 .mobi_nav_links, .mobi_nav {
-    display: none;
+    display: map-get($displays, "non");
   }
 
 body {
-    background:hsl(0, 0%, 29%);
+    background: transparent;
     margin: 0px;
     color: hsl(0, 0%, 96%);
     font-family: oxygen;
     font-size: 16px;
+}
 
+html {
+    scroll-behavior: smooth;
+    // background:hsl(0, 0%, 29%);
+    background: black;
+    font-size: 16px;
+}
+
+.start-video {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#view-vid {
+  width: 100vw; 
+  height: 100vh;
+}
+
+#sky-high {
+  display: map-get($displays, "non");
+  z-index: -1;
+}
+
+#club-kid {
+  display: map-get($displays, "non");
+  z-index: -1;
+}
+
+#art-trip {
+  display: map-get($displays, "non");
+  z-index: -1;
+}
+
+#ttitd-vid {
+  background: transparent;
+  z-index: -10;
+  width: 100vw; 
+  height: 100vh;
+}
+
+#subtitle-sky {
+  display: map-get($displays, "non");
+  font-size: 60px;
+}
+
+#subtitle-club {
+  display: map-get($displays, "non");
+  font-size: 60px;
+}
+
+#subtitle-art {
+  display: map-get($displays, "non");
+  font-size: 60px;
+}
+
+#subtitle-end {
+  display: map-get($displays, "non");
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  font-size: 75px;
+  width: 100%;
+}
+
+.sticky-signup {
+  position: absolute;
+  position: sticky;
+  top: 0;
+}
+
+.title-container {
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  font-size: 75px;
+  width: 100%;
+  opacity: 1;
+  -webkit-animation: fadeInFromNone 4s ease-in-out;
+  -moz-animation: fadeInFromNone 4s ease-in-out;
+  animation: fadeInFromNone 4s ease-in-out;
+}
+
+.bottom-title-container {
+  position: absolute;
+  bottom: 20%;
+  left: 20%;
+  font-size: 75px;
+  width: 100%;
+  opacity: 1;
+  -webkit-animation: fadeInAndOut 4s ease-in-out;
+  -moz-animation: fadeInAndOut 4s ease-in-out;
+  animation: fadeInAndOut 4s ease-in-out;
+}
+
+
+.subtitle-container {
+  position: relative;
+  font-size: 10px;
+  top: 0%;
+  -webkit-animation: fadeInFromNone 5s linear;
+  -moz-animation: fadeInFromNone 5s linear;
+  animation: fadeInFromNone 5s linear;
+}
+
+.title-padding {
+  padding-right: 5%;
+}
+
+.sub-title-vid {
+  padding-left: 20%;
+}
+
+.container-back-overlay {
+   background: rgba(0, 0, 0, .4);
+   color: rgba(0, 0, 0, 0);
+   z-index: -1;
+  -webkit-animation: overlay-slide 2.5s ease-in;
+  animation: overlay-slide 2.5s ease-in;
+}
+
+.primary-cont-flex {
+  display: flex;
+  flex: 1;
+  background: transparent !important;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.open-back {
+  background-image: url("/static/assets/img/opener/back1.jpg");
+  height: 100%; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.open-back-2 {
+  background-image: url("/static/assets/img/opener/galaxy.jpg");
+  height: 100%; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.disp-none-opener {
+  display: map-get($displays, "non");
+}
+
+.disp-none {
+  display: map-get($displays, "non");
 }
 
 .title,.label {
   color: white;
+}
+
+.nav-fixed {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.transparent-back {
+  background: transparent;
 }
 
 .mobi_back {
@@ -147,3 +314,200 @@ body {
 .cactus .cactus_mobi {
     margin: 0px
   }
+
+
+// Overlay and title animations
+
+@-webkit-keyframes overlay-slide {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@keyframes overlay-slide {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@-webkit-keyframes title-appear {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@keyframes title-appear {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+
+@-webkit-keyframes overlay-slide {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@keyframes overlay-slide {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@-webkit-keyframes title-appear {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+@keyframes title-appear {
+  from {width: 0%;}
+  to {width: 100%;}
+}
+
+
+// Fader transitions
+
+@-webkit-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInFromNone {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    100% {
+        display: block;
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeInAndOut {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    50% {
+        display: block;
+        opacity: 1;
+    }
+    
+
+    100% {
+        display: block;
+        opacity: .5;
+    }
+}
+
+@-moz-keyframes fadeInAndOut {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    1% {
+        display: block;
+        opacity: 0;
+    }
+
+    50% {
+        display: block;
+        opacity: 1;
+    }
+    
+
+    100% {
+        display: block;
+        opacity: .5;
+    }
+}
+
+@-o-keyframes fadeInAndOut {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    50% {
+        display: block;
+        opacity: 1;
+    }
+    
+
+    100% {
+        display: block;
+        opacity: .5;
+    }
+}
+
+@keyframes fadeInAndOut {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+
+    50% {
+        display: block;
+        opacity: 1;
+    }
+    
+
+    100% {
+        display: block;
+        opacity: .5;
+    }
+}
