Brings profile photos back

--- a/main_app/templates/profile/detail.html
+++ b/main_app/templates/profile/detail.html
@@ -24,7 +24,7 @@
             <div class="media">
                 <div class="media-left">
                     <figure class="image is-48x48">
-                        <!-- <img src="{{ user.profile.profilephoto.url }}"> -->
+                        <img src="{{ user.profile.profilephoto.url }}">
                     </figure>
                 </div>
                 <div class="media-content">
